--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,11 @@
 [phases.setup]
-nixPkgs = ['python311', 'postgresql_16.dev', 'gcc']  # Use Python 3.11
+nixPkgs = ['python311', 'gcc', 'postgresql_16']
 
 [phases.install]
-cmds = ['python -m venv --copies /opt/venv', '. /opt/venv/bin/activate', 'pip install -r requirements.txt']
+cmds = ['pip install -r requirements.txt']
+
+[phases.build]
+cmds = []
 
 [start]
-cmd = 'gunicorn --bind 0.0.0.0:$PORT app:app'
+cmd = 'python app.py'
