--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,8 @@
 [phases.setup]
-nixPkgs = ['python311', 'gcc', 'postgresql_16']
+nixPkgs = ['python311', 'postgresql_16.dev', 'gcc']  # Use Python 3.11
 
 [phases.install]
-cmds = ['pip install -r requirements.txt']
-
-[phases.build]
-cmds = []
+cmds = ['python -m venv --copies /opt/venv', '. /opt/venv/bin/activate', 'pip install -r requirements.txt']
 
 [start]
-cmd = 'python app.py'
+cmd = 'gunicorn --bind 0.0.0.0:$PORT app:app'
